# Helix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build  setup.sh
bench/: bench_common.h  bench_experiments.h  bench_main.cpp  exp_depth_vs_time.cpp  exp_move_stability.cpp  exp_pvs_sweep.cpp  exp_time_to_quality.cpp  exp_tree_reuse.cpp
engine/: board.cpp  board.h  chess_bot.cpp  chess_bot.h  chess_game.cpp  chess_game.h  main.cpp  parser.h  utils.h
engine/core/: board.cpp  board.h  board_settings.h  chess_game.cpp  chess_game.h  move.h  piece.h  player.h  tt.cpp  tt.h  zobrist.h
engine/eval/: eval.cpp  eval.h  psqt_tables.h
engine/exceptions/: board_exception.h  fen_exception.h
engine/misc/: board_settings.h  move.h  piece.h  player.h  zobrist.h
engine/movement/: move_gen.cpp  move_gen.h
engine/search/: chess_bot.cpp  chess_bot.h  debug_print.cpp  debug_print.h  heuristics.cpp  heuristics.h  search.cpp  search.h  time_manager.cpp  time_manager.h  tt.cpp  tt.h
engine/search/time/: search_constraints.h  time_control.h  time_manager.cpp  time_manager.h  uci_time_control.h
scripts/: pgn_to_uci.py  score_with_stockfish.py
tests/: tests.cpp
tests/data/: input-test.epd
thesis/: CHANGELOG.md  LICENSE  Manual.tex  README.md  bibliography.bib  body.tex  main.tex  section.preliminaries.tex  section_algorithm_implementation.tex  section_discussion.tex  section_engine_architecture.tex  section_evaluation_function.tex  section_experimental_evaluation.tex  section_introduction.tex  section_related_work.tex  section_search_algorithms.tex  section_time_management_and_constraints.tex
thesis/algotemplate/: CD_2023.sty  CD_2023_colours.sty  format.sty  report.cls  thesis.cls
